--- a/maps.html
+++ b/maps.html
@@ -72,7 +72,7 @@
     <div class="maps-container">
       <div class="map-container">
         <div class="map-label">CH 1</div>
-        <img class="map-image" src="Sans titre1.png" alt="Map Image 1">
+        <img class="map-image" src="Sans titre.png" alt="Map Image 1">
         <div class="red-dots"></div>
       </div>
 
